--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     <i class="fa-solid fa-backward"></i>
                 </button>
                 <button id="btn-play" class="btn btn-play">
-                    <i class="bi bi-play-fill"></i>
+                    <i class="fa-solid fa-play"></i>
                 </button>
                 <button id="btn-next" class="btn btn-next">
-                    <i class="bi bi-forward-fill"></i>
+                    <i class="fa-solid fa-forward"></i>
                 </button>
             </div>
         </div>
@@ -52,4 +52,4 @@
     <script src="config/src/js/index.js"></script>
 </body>
 
-</ht
+</html>
