--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <i class="fa-solid fa-backward"></i>
                 </button>
                 <button id="btn-play" class="btn btn-play">
-                    <i class="fa-solid fa-play"></i>
+                    <i id="btn-play-icon" class="fa-solid fa-play"></i>
                 </button>
                 <button id="btn-next" class="btn btn-next">
                     <i class="fa-solid fa-forward"></i>
@@ -49,6 +49,7 @@
         </div>
     </div>
 
+    <script src="config/src/lib/jquery-3.6.1.min.js"></script>
     <script src="config/src/js/index.js"></script>
 </body>
 
